# MCP-Practical-Guide

./: .env.example  .gitignore  PR_SUMMARY.md  README.md  mcp1.ipynb  mcp_client.py  pyproject.toml
diagrams/: connection_sequence.md  mcp_md.md  multi-tenant-diagram.md
src/: mcp1.ipynb
src/1-mcp-simple-client-server/: client.py  mcp_simple_client.py  mcp_simple_server.py  server.py
src/2-mcp-client-agent/: agent.py  mcp_client_agent_memory.py  mcp_client_simple_agent.py
src/2-mcp-client-simple-agent/: mcp_client_simple_agent.py
src/3-mcp-context/: client.py  mcp_client_context.py  mcp_server_context.py  server.py
src/3-mcp-resource/: client.py  server.py
src/3-mcp-resource/resources/seed/: customer_report.txt
src/4-mcp-context/: server.py
src/4-mcp-resource/: client.py  mcp_client_resource.py  mcp_client_resource_agent.py  mcp_client_resource_template.py  mcp_server_resource.py  server.py
src/4-mcp-resource/resources/: docker-compose.minio.yml
src/4-mcp-resource/resources/seed/: inventory_report.txt  monthly_report.txt
src/5-mcp-prompt/: browser_use.py  client.py  mcp_client_agent.py  mcp_server_prompt.py  server.py
src/6-mcp-challenge-scale/: stateful_server.py
src/6-mcp-multi-clients/: browser_use.py  multi_clients.py
src/7-mcp-challenge-auth/: auth_server.py  client.py  client_sdk_aligned.py  mcp_server_protected.py  mock_oauth_server.py  server.py  server_protected.py  users.json
src/7-mcp-challenge-auth/client_auth_components/: my_oauth_client_provider.py  my_token_storage.py
src/7-mcp-challenge-scale/: client.py
src/7-mcp-challenges/sticky-session/backend/: docker-compose.yml  nginx.conf
src/7-mcp-challenges/sticky-session/client/: mcp_client.py
src/8-mcp-mount-demo/: README.md  client_example.py  main.py  math_server.py  test_mount.py  text_server.py  weather_server.py
src/8-mcp-topology/: client.py  multi_clients.py  multi_servers.py
src/8-mcp-topology/mcp_servers/: nested_server.py  weather_mcp.py
src/9-mcp-challenge-semantics/: agent.py
src/challenges/10-auth-google/: client.py  server.py
src/challenges/6-mcp-scale/db-state/server/: Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  server.py  state_helper.py
src/challenges/6-mcp-scale/stateless/: client.py  stateless_server.py
src/challenges/7-context-window/: client.py  server.py
src/challenges/7-mcp-auth/: auth_flow.md  auth_server.py  client.py  mcp_server_protected.py
src/challenges/7-mcp-auth/client_auth_components/: my_oauth_client_provider.py  my_token_storage.py
src/challenges/8-mcp-auth/auth-server/: auth_server.py
src/challenges/8-mcp-semantics/: agent-elicitation.py  agent-sampling.py
src/challenges/8-mcp-topology/: client.py  registry_server.py
src/challenges/8-mcp-topology/mcp_servers/: finance_mcp.py  stock_mcp.py
src/challenges/9-mcp-auth/: mcp_server_protected.py
src/challenges/9-mcp-auth/auth-server/: server_db_users.json
src/challenges/9-mcp-auth/client_auth_components/: my_token_storage.py
src/challenges/9-mcp-semantics/: agent.py  server.py
src/chllange/db-state/: Dockerfile  app.py  docker-compose.yml
src/chllange/db-state/backend/: app.py  pyproject.toml
src/chllange/db-state/client/: app.py  pyproject.toml
(+17 files in other folders)
