[project]
name = "mcp-meetup"
version = "0.1.0"
description = "MCP"
requires-python = ">=3.11.10"
dependencies = [
    "langchain==0.3.26",
    "langchain-core==0.3.68",
    "langchain-mcp-adapters==0.1.8",
    "langchain-openai==0.3.1",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.5.1",
    "mcp-server-browser-use==0.1.6",
    "openai==1.93.0",
    "python-dotenv==1.1.1",
    "yfinance==0.2.65",
    "fastapi==0.115.14",
    "uvicorn==0.35.0",
    "redis==6.2.0",
    "pydantic==2.11.7",
    "mcp[cli]==1.10.1",
    "langchain-community>=0.3.27",
    "faiss-cpu>=1.11.0",
]
