[project]
name = "mcp-scale-backend"
version = "0.1.0"
description = "MCP Scale Demo Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "fastmcp>=0.1.0",
    "redis>=5.0.1",
    "pydantic>=2.4.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 