[project]
name = "mcp-scale-client"
version = "0.1.0"
description = "MCP Scale Demo Client"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.4.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 