[project]
name = "mcp-scale-demo"
version = "0.1.0"
description = "MCP stateless server scaling demonstration with Redis and agent client"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.11.0",
    "redis[asyncio]>=5.0.0",
    "pydantic>=2.0.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black" 